@@ -12,9 +12,9 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+
+
 import java.util.List;
 
 import static org.springframework.security.config.http.SessionCreationPolicy.STATELESS;
@@ -31,24 +31,23 @@ public class SecurityConfiguration {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // mới thêm dòng này
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests((request) -> request
                         .requestMatchers(
                                 "/movies-app/login",
                                 "/movies-app/register",
                                 "/movies-app/find/**",
-                                "/movies-app/movie/**",  //đã chia lại quyền
-                                "/movies-app/list"
+                                "/movies-app/movie/**",
+                                "/movies-app/list",
+                                "/movies-app/top-reviews",
+                                "/movies-app/top-views",
+                                "/movies-app/top-wishlist",
+                                "/movies-app/top-recent-release"
+
                         ).permitAll()
-                        .requestMatchers("/movies-app/admin/**",
-                                        "/movies-app/top-reviews",
-                                         "/movies-app/top-views",
-                                         "/movies-app/top-wishlist",
-                                        "/movies-app/top-recent-release").hasAnyAuthority("ADMIN")
-                        .requestMatchers("/movies-app/user/**",
-                                        "/movies-app/film",
-                                          "/movies-app/series" ,"/movies-app/user/wishlist/**").hasAnyAuthority("USER")
-                        .requestMatchers("/movies-app/user-admin/**").hasAnyAuthority("ADMIN", "USER")
+                        .requestMatchers("/movies-app/admin/**","/admin/recommendations/**").hasAuthority("ADMIN")
+                        .requestMatchers("/movies-app/film", "/movies-app/series", "/recommendations").hasAnyAuthority("ADMIN", "USER")
+                        .requestMatchers("/movies-app/user/**", "/movies-app/user/wishlist/**").hasAuthority("USER")
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(STATELESS))
@@ -61,9 +60,9 @@ public class SecurityConfiguration {
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedOrigins(List.of("http://localhost:4000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
